topnav overflow bug fix nro1
Try to fix dropdown menu overflow problem

--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ ul{
 	width: 100%;
 	margin: 0px;
 	padding: 0px;
+	min-height: 40px;
 	
 	z-index: 5;
 }
@@ -60,7 +61,7 @@ li.dropdown{
 
 .dropdown-content{
 	display: none;
-	position: absolute;
+	/*position: absolute;*/
 	background-color: #222;
 	min-width: 160px;
 	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.3);
